{{$NEXT}}

0.01      2021-04-18 10:01:29 CEST

          -  Allows devs to create rewritable auto-generated documents in Perl
             and HTML. Other formats will be supported later.